# descartes

descartes_benchmarks/: CMakeLists.txt  package.xml
descartes_benchmarks/config/: robot_description.urdf  ur5_demo.urdf
descartes_benchmarks/include/descartes_benchmarks/kinematics/: ur5_robot_model.h  ur_kin.h
descartes_benchmarks/include/descartes_benchmarks/trajectories/: create_lemniscate_curve.h
descartes_benchmarks/launch/: benchmark.launch
descartes_benchmarks/src/: benchmark_main.cpp
descartes_benchmarks/src/kinematics/: ur5_robot_model.cpp  ur_kin.cpp  ur_moveit_plugin.cpp
descartes_benchmarks/src/trajectories/: create_lemniscate_curve.cpp
descartes_core/include/descartes_core/: robot_model.h
descartes_moveit/include/descartes_moveit/: ikfast_moveit_state_adapter.h  moveit_state_adapter.h
descartes_moveit/src/: ikfast_moveit_state_adapter.cpp  moveit_state_adapter.cpp
descartes_planner/: CMakeLists.txt
descartes_planner/include/descartes_planner/: dense_planner.h  ladder_graph.h  ladder_graph_dijkstras.h  planning_graph.h  sparse_planner.h
descartes_planner/src/: dense_planner.cpp  ladder_graph_dijkstras.cpp  planning_graph.cpp  sparse_planner.cpp
